[gd_scene load_steps=7 format=3 uid="uid://tihw7phb5x3h"]

[ext_resource type="Texture2D" uid="uid://cys0djg4fi1iy" path="res://addons/ninetailsrabbit.indie_blueprint_ui/src/resizable_ninepatchrect/box_transparent.png" id="1_iijwg"]
[ext_resource type="Script" uid="uid://dd8o8wwanhhpv" path="res://addons/ninetailsrabbit.indie_blueprint_ui/src/resizable_ninepatchrect/resizable_ninepatchrect.gd" id="2_tbr5e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d72y6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nhcf8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ascb7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rje43"]

[node name="ResizableNinePatchRect" type="NinePatchRect"]
self_modulate = Color(1, 1, 1, 0.839216)
offset_right = 50.0
offset_bottom = 50.0
texture = ExtResource("1_iijwg")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
script = ExtResource("2_tbr5e")

[node name="BoxCollisions" type="StaticBody2D" parent="."]
collision_priority = 2.0

[node name="TopCollision" type="CollisionShape2D" parent="BoxCollisions"]
shape = SubResource("RectangleShape2D_d72y6")

[node name="BottomCollision" type="CollisionShape2D" parent="BoxCollisions"]
shape = SubResource("RectangleShape2D_nhcf8")

[node name="RightCollision" type="CollisionShape2D" parent="BoxCollisions"]
shape = SubResource("RectangleShape2D_ascb7")

[node name="LeftCollision" type="CollisionShape2D" parent="BoxCollisions"]
shape = SubResource("RectangleShape2D_rje43")
